// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 1 expense totaling $1.23
  </h1>
</div>
`;

exports[`should render ExpenseSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 23 expenses totaling $12,345.67
  </h1>
</div>
`;
